fixed annoying little bug with menu button on small screens when text in banner gets to large..
The bug manifested itself in menu button not working on homepage
as banner content overlapped it so the click event was not triggered
on menu-bar button.

--- a/website/themes/lugfl/assets/css/main.css
+++ b/website/themes/lugfl/assets/css/main.css
@@ -1863,14 +1863,11 @@ h1, h2, h3, h4, h5, h6 {
   }
   .navbar-nav {
 	display: none;
-}
+  }
   .menu-bar span {
     float: right;
     display: block;
   }
-}
-
-@media screen and (max-width: 768px) {
   .navbar-nav.responsive {position: relative;display: block;}
   .menu-bar {
     position: absolute;
@@ -2105,8 +2102,8 @@ ul.pager li a:hover {
   height: 300px;
 }
 
-.banner-area .banner-content {
-  margin-top: 80px;
+.banner-area {
+  padding-top: 50px;
 }
 
 .banner-area .banner-content h1 {
